[package]
name = "zepar"
version = "1.0.0"
authors = ["hazae41 <hazae41@proton.me>"]
edition = "2021"

description = "WebAssembly port of AES encryption with CTR mode"
repository = "https://github.com/hazae41/zepar-wasm"
license = "Unlicense"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
debug = false
opt-level = 3

[dependencies]
wasm-bindgen = { version = "0.2.87", default-features = false, features = ["std"] }
aes = { version = "0.8.3", default-features = false }
ctr = { version = "0.9.2", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc"] }